feat: add "Purge outdated data" page under a two-node XML-Repair navigation tree (#206)